# Auster

./: README.md
eurus/: .gitignore  Cargo.toml  README.md  TODO.md
eurus/res/: config.toml
eurus/src/: config.rs  db.rs  lib.rs  main.rs  message.rs  repository.rs  room.rs  service.rs
eurus/src/client/: mod.rs  mqtt.rs  old_mqtt.rs
eurus/src/lib/: lib.rs  room.rs  service.rs
eurus/src/lib/message/: mod.rs  mqtt_adapter.rs
eurus/src/message/: mqtt_adapter.rs
eurus/src/room/: mod.rs  model.rs  runtime.rs
eurus/src/service/: dto.rs  mod.rs
