[package]
name = "eurus"
version = "0.1.0"
authors = ["Rafał Galczak <r.galczak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]

hyper = "0.13"
paho-mqtt = { git = "https://github.com/eclipse/paho.mqtt.rust" }
mongodb = "1.1.1"

rand = "0.7"
chrono = "0.4"
base64 = "0.4"

serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
toml = "0.5"

anyhow = "1.0"
thiserror = "1.0"

tokio = { version = "0.2", features = ["full"]}
futures = "0.3"

tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
tracing-attributes = "0.1"